// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdvancedSettings should render read-only when saving is disabled 1`] = `
<div>
  <EuiFlexGroup
    gutterSize="none"
  >
    <EuiFlexItem>
      <foo_component />
    </EuiFlexItem>
    <EuiFlexItem>
      <Search
        categories={
          Array [
            "category",
            "elasticsearch",
          ]
        }
        onQueryChange={[Function]}
        query={
          Query {
            "ast": _AST {
              "_clauses": Array [
                Object {
                  "field": "ariaName",
                  "match": "must",
                  "operator": "eq",
                  "type": "field",
                  "value": "test string setting",
                },
              ],
              "_indexedClauses": Object {
                "field": Object {
                  "ariaName": Array [
                    Object {
                      "field": "ariaName",
                      "match": "must",
                      "operator": "eq",
                      "type": "field",
                      "value": "test string setting",
                    },
                  ],
                },
                "group": Array [],
                "is": Object {},
                "term": Array [],
              },
            },
            "syntax": Object {
              "parse": [Function],
              "print": [Function],
              "printClause": [Function],
            },
            "text": "ariaName:\\"test string setting\\"",
          }
        }
      />
    </EuiFlexItem>
  </EuiFlexGroup>
  <foo_component />
  <EuiSpacer
    size="m"
  />
  <CallOuts />
  <EuiSpacer
    size="m"
  />
  <AdvancedSettingsVoiceAnnouncement
    queryText="ariaName:\\"test string setting\\""
    settings={
      Object {
        "category": Array [
          Object {
            "ariaName": "Test string setting",
            "category": Array [
              "category",
            ],
            "defVal": null,
            "deprecation": undefined,
            "description": "Description for Test string setting",
            "displayName": "Test string setting",
            "isCustom": false,
            "isOverridden": false,
            "name": "test:string:setting",
            "optionLabels": undefined,
            "options": undefined,
            "readonly": false,
            "requiresPageReload": false,
            "type": "string",
            "validation": undefined,
            "value": undefined,
          },
        ],
      }
    }
  />
  <Form
    categories={
      Array [
        "category",
        "elasticsearch",
      ]
    }
    categoryCounts={
      Object {
        "category": 12,
        "elasticsearch": 2,
      }
    }
    clear={[Function]}
    clearQuery={[Function]}
    enableSaving={false}
    save={[Function]}
    settings={
      Object {
        "category": Array [
          Object {
            "ariaName": "Test string setting",
            "category": Array [
              "category",
            ],
            "defVal": null,
            "deprecation": undefined,
            "description": "Description for Test string setting",
            "displayName": "Test string setting",
            "isCustom": false,
            "isOverridden": false,
            "name": "test:string:setting",
            "optionLabels": undefined,
            "options": undefined,
            "readonly": false,
            "requiresPageReload": false,
            "type": "string",
            "validation": undefined,
            "value": undefined,
          },
        ],
      }
    }
    showNoResultsMessage={true}
  />
  <foo_component
    enableSaving={false}
    onQueryMatchChange={[Function]}
    query={
      Query {
        "ast": _AST {
          "_clauses": Array [
            Object {
              "field": "ariaName",
              "match": "must",
              "operator": "eq",
              "type": "field",
              "value": "test string setting",
            },
          ],
          "_indexedClauses": Object {
            "field": Object {
              "ariaName": Array [
                Object {
                  "field": "ariaName",
                  "match": "must",
                  "operator": "eq",
                  "type": "field",
                  "value": "test string setting",
                },
              ],
            },
            "group": Array [],
            "is": Object {},
            "term": Array [],
          },
        },
        "syntax": Object {
          "parse": [Function],
          "print": [Function],
          "printClause": [Function],
        },
        "text": "ariaName:\\"test string setting\\"",
      }
    }
  />
</div>
`;

exports[`AdvancedSettings should render specific setting if given setting key 1`] = `
<div>
  <EuiFlexGroup
    gutterSize="none"
  >
    <EuiFlexItem>
      <foo_component />
    </EuiFlexItem>
    <EuiFlexItem>
      <Search
        categories={
          Array [
            "category",
            "elasticsearch",
          ]
        }
        onQueryChange={[Function]}
        query={
          Query {
            "ast": _AST {
              "_clauses": Array [
                Object {
                  "field": "ariaName",
                  "match": "must",
                  "operator": "eq",
                  "type": "field",
                  "value": "test string setting",
                },
              ],
              "_indexedClauses": Object {
                "field": Object {
                  "ariaName": Array [
                    Object {
                      "field": "ariaName",
                      "match": "must",
                      "operator": "eq",
                      "type": "field",
                      "value": "test string setting",
                    },
                  ],
                },
                "group": Array [],
                "is": Object {},
                "term": Array [],
              },
            },
            "syntax": Object {
              "parse": [Function],
              "print": [Function],
              "printClause": [Function],
            },
            "text": "ariaName:\\"test string setting\\"",
          }
        }
      />
    </EuiFlexItem>
  </EuiFlexGroup>
  <foo_component />
  <EuiSpacer
    size="m"
  />
  <CallOuts />
  <EuiSpacer
    size="m"
  />
  <AdvancedSettingsVoiceAnnouncement
    queryText="ariaName:\\"test string setting\\""
    settings={
      Object {
        "category": Array [
          Object {
            "ariaName": "Test string setting",
            "category": Array [
              "category",
            ],
            "defVal": null,
            "deprecation": undefined,
            "description": "Description for Test string setting",
            "displayName": "Test string setting",
            "isCustom": false,
            "isOverridden": false,
            "name": "test:string:setting",
            "optionLabels": undefined,
            "options": undefined,
            "readonly": false,
            "requiresPageReload": false,
            "type": "string",
            "validation": undefined,
            "value": undefined,
          },
        ],
      }
    }
  />
  <Form
    categories={
      Array [
        "category",
        "elasticsearch",
      ]
    }
    categoryCounts={
      Object {
        "category": 12,
        "elasticsearch": 2,
      }
    }
    clear={[Function]}
    clearQuery={[Function]}
    enableSaving={true}
    save={[Function]}
    settings={
      Object {
        "category": Array [
          Object {
            "ariaName": "Test string setting",
            "category": Array [
              "category",
            ],
            "defVal": null,
            "deprecation": undefined,
            "description": "Description for Test string setting",
            "displayName": "Test string setting",
            "isCustom": false,
            "isOverridden": false,
            "name": "test:string:setting",
            "optionLabels": undefined,
            "options": undefined,
            "readonly": false,
            "requiresPageReload": false,
            "type": "string",
            "validation": undefined,
            "value": undefined,
          },
        ],
      }
    }
    showNoResultsMessage={true}
  />
  <foo_component
    enableSaving={true}
    onQueryMatchChange={[Function]}
    query={
      Query {
        "ast": _AST {
          "_clauses": Array [
            Object {
              "field": "ariaName",
              "match": "must",
              "operator": "eq",
              "type": "field",
              "value": "test string setting",
            },
          ],
          "_indexedClauses": Object {
            "field": Object {
              "ariaName": Array [
                Object {
                  "field": "ariaName",
                  "match": "must",
                  "operator": "eq",
                  "type": "field",
                  "value": "test string setting",
                },
              ],
            },
            "group": Array [],
            "is": Object {},
            "term": Array [],
          },
        },
        "syntax": Object {
          "parse": [Function],
          "print": [Function],
          "printClause": [Function],
        },
        "text": "ariaName:\\"test string setting\\"",
      }
    }
  />
</div>
`;
